--- a/index.html
+++ b/index.html
@@ -2223,7 +2223,7 @@ There you will find links and examples about ADR.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">LLM</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Empathy (Mistral, Qwen), Gemini</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Mistral</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Mistral meets our needs for the project while being efficient and easy to integrate into our system.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We tried the three options and they all met our needs for the project but we decided to stick with Mistral, which was an option in the initial prototye.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata</p></td>
