--- a/index.html
+++ b/index.html
@@ -2178,61 +2178,61 @@ There you will find links and examples about ADR.</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Architecture</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Architecture</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Microservices, frontend &amp; backend</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Microservices</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">We chose the microservices architecture for its scalability, flexibility and decoupling, allowing the game to evolve easily and handle increased loads efficiently.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Language</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Language</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Java, JavaScript</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">JavaScript</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The initial prototype was written using JavaScript so we decided to keep on with it.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Backend framework</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Backend</strong> framework</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">SpringBoot, Express, Node.js</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Express, Node.js</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Since we chose JavaScript as the language, this options would make integration with the front easier.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Database</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Database</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB (NoSQL), PostgreSQL, MySQL</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MongoDB was the database used in the prototype of the project so we continued with it. It allows flexible storage of questions and answers, along with horizontal scalability.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Cloud service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Cloud service</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oracle Cloud, Azure Cloud</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Azure cloud</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">While Oracle Cloud offers more flexibility, we decided to stick with Azure to provide a stable infrastructure for scaling the game.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Frontend</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Frontend</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">React</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">React</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Although we had never worked with it before, it is a powerful framework which provides predefined and reusable components.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Deployment</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Deployment</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Docker</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Docker</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">It is a fast option and allows an easy maintaining of the application. Also, it was the option used in the initial prototype.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">LLM</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>LLM</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Empathy (Mistral, Qwen), Gemini</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Mistral</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">We tried the three options and they all met our needs for the project but we decided to stick with Mistral, which was an option in the initial prototye.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Wikidata</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Wikidata</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Direct HTTP request, Wikidata Query Service (WDQS), MediaWiki Action API, Wikibase REST API, Dumps</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">WDQS</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">We decided to use the Wikidata Query Service, making queries in SPARQL, making data retrieval structured and efficient without overloading our backend.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We decided to use the Wikidata Query Service, with queries in SPARQL, making data retrieval structured and efficient without overloading our backend.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Component navigation</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Component navigation</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">React-router, Link</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">React-router</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">This option provides efficient route and state management, preventing component conflicts and enhancing user experience.</p></td>
