--- a/index.html
+++ b/index.html
@@ -2204,8 +2204,8 @@ There you will find links and examples about ADR.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Cloud service</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oracle Cloud, Azure Cloud</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Azure cloud</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">While Oracle Cloud offers more flexibility, we decided to stick with Azure to provide a stable infrastructure for scaling the game.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oracle cloud</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">We started using Azure but Oracle offers more flexibility and it&#8217;s easier to use so we finally decided to change.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Frontend</strong></p></td>
