--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,7 @@ when your infrastructure is more complex.</p>
 </dl>
 </div>
 <div class="paragraph">
-<p>We utilize an Ubuntu server hosted on Azure, providing an isolated and pre-configured environment optimized for running our services. Hosting on Azure helps reduce infrastructure costs by reducing concerns such as security, availability, and maintenance.</p>
+<p>We utilize a server hosted on Oracle, providing an isolated and pre-configured environment optimized for running our services. Hosting on Oracle helps reduce infrastructure costs and enhances flexibility.</p>
 </div>
 <div class="paragraph">
 <p>We use Docker because it helps package our application and its dependencies into a standardized unit, ensuring it runs consistently across different environments, regardless of the machine&#8217;s setup. Instead of using a monolithic architecture, we’ve chosen a microservices approach with Docker containers. This allows each service to be isolated, with its own resources, preventing conflicts and improving scalability and resilience. Each service has its own Docker image, which gives us flexibility in development and deployment. Our project includes services like the web application, gateway, user authentication, and MongoDB server. This Docker-based setup makes deployment, management, and resource use more efficient, while boosting flexibility and scalability.</p>
@@ -2090,7 +2090,7 @@ on this list.</p>
 <p><strong>State Management</strong>: React’s state management system is used to track user selections, game progress, and scores. It ensures a smooth and responsive experience as users navigate through the game.</p>
 </li>
 <li>
-<p><strong>Azure Deployment</strong>: The game will be hosted on Azure to ensure scalability, reliability, and easy deployment. Azure provides a secure and robust infrastructure for hosting both the frontend and backend components.</p>
+<p><strong>Oracle Deployment</strong>: The game will be hosted on Oracle to ensure scalability, flexibility, and easy deployment. Oracle provides a secure and robust infrastructure for hosting both the frontend and backend components.</p>
 </li>
 </ul>
 </div>
@@ -2103,10 +2103,10 @@ on this list.</p>
 <p><strong>Agile Development</strong>: The project is developed using an Agile methodology, specifically in 3-week sprints. This allows for iterative development, rapid feedback, and continuous improvement.</p>
 </li>
 <li>
-<p><strong>Continuous Deployment</strong>: The game is deployed through Azure, with automated build and deployment pipelines to ensure smooth updates and patches.</p>
+<p><strong>Continuous Deployment</strong>: The game is deployed through Oracle, with automated build and deployment pipelines to ensure smooth updates and patches.</p>
 </li>
 <li>
-<p><strong>Scalability</strong>: As the number of users grows, the system is designed to scale horizontally. Azure’s cloud infrastructure supports scaling to handle increased traffic and ensure high availability during peak usage times.</p>
+<p><strong>Scalability</strong>: As the number of users grows, the system is designed to scale horizontally. Oracle&#8217;s cloud infrastructure supports scaling to handle increased traffic and ensure high availability during peak usage times.</p>
 </li>
 </ul>
 </div>
@@ -2637,7 +2637,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Deployment</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">The process of making the application live and accessible to users, planned to be done using Azure.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The process of making the application live and accessible to users. Initially planned to be done using Azure, finally Oracle was chosen.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Technical Debt</strong></p></td>
