--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,7 @@ In the best case you will get away with examples or simple signatures.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-1fcdd852c4cc875b7f6b9330a6f0996a.png" alt="Diagram" width="400px" height="300px">
+<img src="./images/diag-plantuml-md5-2356aed142d2e20bb89749f8915a8450.png" alt="Diagram" width="400px" height="300px">
 </div>
 </div>
 <div class="dlist">
@@ -1525,7 +1525,7 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-777b31d4d304c57df3fd498ef2c1626c.png" alt="Diagram" width="391" height="207">
+<img src="./images/diag-plantuml-md5-d67ca693f500b1338bff861c85897aca.png" alt="Diagram" width="504" height="207">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1543,6 +1543,10 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Frontend</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Manages user interaction and presentation.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">**Gateway""</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Manages interaction between frontend and backend.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Backend</strong></p></td>
@@ -1570,7 +1574,7 @@ part of arc42 for additional levels.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-435df509a63ec01d3a038b97f5637ef5.png" alt="Diagram" width="981" height="515">
+<img src="./images/diag-plantuml-md5-fcfd0394a60b2f781994d722783ffe78.png" alt="Diagram" width="1007" height="787">
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1594,7 +1598,7 @@ part of arc42 for additional levels.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Retrieves the data of the users as well as their stadistics to generate the ranking.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Game Service</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>WebApp (Game Service)</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Manages game state and logic. Uses more concrete services like LLM and Question to divide responsibilities.</p></td>
 </tr>
 <tr>
@@ -1693,7 +1697,7 @@ Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/SignUp.png" alt="SignUp" width="777" height="564">
+<img src="./images/SignUp.png" alt="SignUp" width="935" height="625">
 </div>
 </div>
 </div>
@@ -1704,7 +1708,7 @@ Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/LogIn.png" alt="LogIn" width="662" height="610">
+<img src="./images/LogIn.png" alt="LogIn" width="782" height="670">
 </div>
 </div>
 </div>
@@ -1715,7 +1719,7 @@ Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Playing.png" alt="Playing" width="839" height="696">
+<img src="./images/Playing.png" alt="Playing" width="1023" height="757">
 </div>
 </div>
 </div>
@@ -1726,7 +1730,7 @@ Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Hints.png" alt="Hints" width="503" height="428">
+<img src="./images/Hints.png" alt="Hints" width="676" height="549">
 </div>
 </div>
 </div>
@@ -1737,7 +1741,7 @@ Data must be valid and not collide with some account that already exists.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Rankings.png" alt="Rankings" width="745" height="668">
+<img src="./images/Rankings.png" alt="Rankings" width="892" height="729">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1831,7 +1835,7 @@ when your infrastructure is more complex.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Deployment-View.png" alt="Deployment View" width="1097" height="936">
+<img src="./images/Deployment-View.png" alt="Deployment View" width="1130" height="959">
 </div>
 </div>
 <div class="dlist">
