--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
-<h1><span class="image"><img src="./images/brain_logo.png" alt="arc42"></span> Documentation</h1>
+<h1><span class="image"><img src="./images/brain_logo.jpg" alt="arc42"></span> Documentation</h1>
 <div class="details">
 <span id="revnumber">version 1.0.8 EN,</span>
 <span id="revdate">April 2025</span>
@@ -2727,7 +2727,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <div id="footer">
 <div id="footer-text">
 Version 1.0.8 EN<br>
-Last updated 2025-04-27 17:35:40 +0200
+Last updated 2025-04-27 17:37:24 +0200
 </div>
 </div>
 </body>
