--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@ In the best case you will get away with examples or simple signatures.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/diag-plantuml-md5-f999ff72f4b7e99f938212a55eba8750.png" alt="Diagram" width="400px" height="300px">
+<img src="./images/diag-plantuml-md5-9bc68f8cb050f0aa67904b0864bc6ce2.png" alt="Diagram" width="400px" height="300px">
 </div>
 </div>
 <div class="dlist">
@@ -1538,7 +1538,7 @@ Leave out normal, simple, boring or standardized parts of your system</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Handles logic, coordination, and communication between the frontend, database, and external services.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Database Layer</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Database</strong></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Provides secure and efficient storage and retrieval of data for the application.</p></td>
 </tr>
 </tbody>
@@ -1862,7 +1862,7 @@ when your infrastructure is more complex.</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Web App</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">WebApp (Game Service)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">User interface that interacts with the rest of the application.</p></td>
 </tr>
 <tr>
@@ -1874,7 +1874,7 @@ when your infrastructure is more complex.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Manages user data and statistics, providing some functions for API consumers.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Auth Service</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Authentication Service</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Handles user authentication.</p></td>
 </tr>
 <tr>
@@ -1890,7 +1890,7 @@ when your infrastructure is more complex.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Stores user data and game history.</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Empathy</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">LLM (Empathy)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">External LLM used to obtain the hints.</p></td>
 </tr>
 <tr>
