--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="header">
 <h1><span class="image"><img src="./images/brain_logo.jpg" alt="arc42"></span> Documentation</h1>
 <div class="details">
-<span id="revnumber">version 1.0.8 EN,</span>
+<span id="revnumber">version 1.0 EN,</span>
 <span id="revdate">April 2025</span>
 </div>
 <div id="toc" class="toc">
@@ -1032,7 +1032,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 <div class="sect2">
 <h3 id="_introduction">3.1. Introduction</h3>
 <div class="paragraph">
-<p>WiChat is a game designed for an online experiment done by RTVE, with the typical TV quiz contest format. To implement this application, we need to call several external APIs. Wikidata is the one in charge of giving us the information we require for the questions and the answers, and also the images the user is going to see, which are the main part of the application. We also use an LLM for generating some hints for the user (in form of wildcards) and a database for storing the user log-in information.</p>
+<p>brAIn is a game designed for an online experiment done by RTVE, with the typical TV quiz contest format. To implement this application, we need to call several external APIs. Wikidata is the one in charge of giving us the information we require for the questions and the answers, and also the images the user is going to see, which are the main part of the application. We also use an LLM for generating some hints for the user (in form of wildcards) and a database for storing the user log-in information.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1439,13 +1439,13 @@ In the best case you will get away with examples or simple signatures.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>User ↔ WIChat: Direct interaction through UI.</p>
+<p>User ↔ brAIn: Direct interaction through UI.</p>
 </li>
 <li>
-<p>WIChat ↔ Wikidata: Structured data retrieval for factual information and images.</p>
+<p>brAIn ↔ Wikidata: Structured data retrieval for factual information and images.</p>
 </li>
 <li>
-<p>WIChat ↔ LLM: Natural language understanding and response generation.</p>
+<p>brAIn ↔ LLM: Natural language understanding and response generation.</p>
 </li>
 </ul>
 </div>
@@ -2745,8 +2745,8 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0.8 EN<br>
-Last updated 2025-04-29 16:13:13 +0200
+Version 1.0 EN<br>
+Last updated 2025-04-29 18:48:36 +0200
 </div>
 </div>
 </body>
